--- a/commerece.css
+++ b/commerece.css
@@ -9,126 +9,6 @@ body {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
-@media screen and (max-width: 1440px) {
-  header {
-    padding: 40%;
-    background-color: rgb(17, 124, 143);
-  }
-  #logo {
-    display: inline;
-    padding: 0;
-    margin: 0 4% 0 3%;
-    flex-wrap: wrap;
-    float: left;
-    /* border: 2px solid red; */
-  }
-
-  #login,
-  #cart {
-    display: inline;
-    padding: 1%;
-    margin: 3% 4.5%;
-    width: 10%;
-  }
-  #login-icon {
-    transform: translateY(30%);
-  }
-  #cart i {
-    transform: translateY(30%);
-    size: 10%;
-  }
-  .search-bar {
-    position: relative;
-    display: inline;
-    width: 35%;
-    border-radius: 40px;
-  }
-
-  .search-bar input {
-    display: inline;
-    width: 32%;
-    margin-top: 1%;
-    padding: 0.5% 10% 0.5% 0%;
-    font-size: 95%;
-  }
-
-  #search-icon {
-    position: absolute;
-    color: rgb(11, 233, 244);
-    margin-left: -9%;
-    margin-top: 4%;
-  }
-  .search-bar i:hover {
-    cursor: pointer;
-  }
-
-  nav {
-    background-color: #333;
-    overflow: hidden;
-    color: white;
-    padding: 0.5%;
-    display: inline-block;
-    width: 100%;
-  }
-
-  nav a {
-    text-decoration: none;
-    padding: 1.3%;
-    text-align: center;
-    color: white;
-  }
-  #login:hover,
-  #cart:hover,
-  #search-button:hover {
-    cursor: pointer;
-  }
-
-  .nav2 {
-    background-color: #333;
-    overflow: hidden;
-    color: white;
-    padding: 1.5%;
-    display: inline-block;
-    width: 100%;
-    height: 4%;
-    text-decoration: none;
-  }
-  a.nav2:hover {
-    cursor: pointer;
-  }
-
-  .nav2 a {
-    text-align: center;
-    color: white;
-    margin: 0 6%;
-  }
-}
-
-@media screen and (max-width: 1024px) {
-  #login,
-  #cart {
-    padding: 0%;
-    margin: 3%;
-  }
-
-  .nav2 a {
-    margin: 0 5%;
-  }
-}
-@media screen and (max-width: 768px) {
-  #search {
-    width: 25%;
-    font-size: 65%;
-    padding: 1% 1%;
-  }
-  .search-bar i {
-    transform: translateX(-220%);
-  }
-  .nav2 a {
-    margin: 0 4%;
-  }
-}
-
 .slideshow-container img {
   position: relative;
   overflow: visible;
@@ -180,76 +60,6 @@ h3 {
 /* .item h4 {
   width: fit-content;
 } */
-
-/* /////////////////////////////////////////////////////////////////////// */
-@media screen and (max-width: 1440px) {
-  .brands,
-  .pet_toys {
-    display: block;
-    box-sizing: border-box;
-    max-width: 100%;
-  }
-  .brand img {
-    display: inline-block;
-    float: inline-start;
-    width: 20%;
-    margin: 2% 2%;
-    padding: 0%;
-    /* max-height: 20%; */
-  }
-  .more-categories {
-    box-sizing: border-box;
-    display: block;
-    width: 100%;
-    height: -10px;
-    padding-top: 3%;
-  }
-  .categories {
-    display: block;
-    margin: 1%;
-    justify-content: space-between;
-  }
-  #head {
-    margin-top: 3%;
-  }
-  .item {
-    display: inline-block;
-    justify-content: center;
-    align-items: center;
-    width: 18%;
-    margin: 2% -2% 2% 0%;
-  }
-  .item h4 {
-    width: max-content;
-    padding-left: 10%;
-  }
-
-  .items {
-    align-items: center;
-    display: inline-block;
-    float: inline-start;
-    margin: 2% 0%;
-    padding: 0%;
-  }
-  h4,
-  p {
-    text-align: center;
-    margin: 0%;
-    width: 50%;
-  }
-  .dash_dog {
-    display: block;
-    box-sizing: border-box;
-    max-width: 100%;
-  }
-  .dash img {
-    display: inline-block;
-    width: 18%;
-    margin: 2% 3%;
-    padding: 0%;
-    /* max-height: 20%; */
-  }
-}
 
 .toys {
   display: inline-block;
@@ -310,11 +120,203 @@ footer {
 }
 
 footer a {
+  display: inline-flex;
+  overflow-x: hidden;
+  justify-content: space-between;
   text-decoration: none;
   padding: 2%;
   text-align: center;
   align-items: center;
   color: white;
+}
+
+header {
+  padding: 40%;
+  background-color: rgb(17, 124, 143);
+}
+#logo {
+  display: inline;
+  padding: 0;
+  margin: 0 4% 0 3%;
+  flex-wrap: wrap;
+  float: left;
+  /* border: 2px solid red; */
+}
+
+#login,
+#cart {
+  display: inline;
+  padding: 1%;
+  margin: 3% 4.5%;
+  width: 10%;
+  color: white;
+}
+#login-icon {
+  transform: translateY(30%);
+}
+#cart i {
+  transform: translateY(30%);
+  size: 10%;
+}
+.search-bar {
+  position: relative;
+  display: inline;
+  width: 35%;
+  border-radius: 40px;
+}
+
+.search-bar input {
+  display: inline;
+  width: 32%;
+  margin-top: 1%;
+  padding: 0.5% 10% 0.5% 0%;
+  font-size: 95%;
+}
+
+#search-icon {
+  position: absolute;
+  color: rgb(11, 233, 244);
+  margin-left: -9%;
+  margin-top: 4%;
+}
+.search-bar i:hover {
+  cursor: pointer;
+}
+
+nav {
+  margin-top: 2px;
+  text-align: center; /* Center align items horizontally */
+  background-color: #333;
+  overflow: hidden;
+  padding: 0.5%;
+}
+
+nav a {
+  text-decoration: none;
+  padding: 1.3%;
+  color: white;
+  display: inline-flex;
+  justify-content: space-between;
+}
+
+#login:hover,
+#cart:hover,
+#search-button:hover {
+  cursor: pointer;
+}
+
+.nav2 {
+  background-color: #333;
+  overflow: hidden;
+  color: white;
+  padding: 1.5%;
+  display: inline-block;
+  width: 100%;
+  height: 4%;
+  text-decoration: none;
+}
+a.nav2:hover {
+  cursor: pointer;
+}
+
+.nav2 a {
+  text-align: center;
+  color: white;
+  margin: 0 5%;
+}
+.brands,
+.pet_toys {
+  display: block;
+  box-sizing: border-box;
+  max-width: 100%;
+}
+.brand img {
+  display: inline-block;
+  float: inline-start;
+  width: 20%;
+  margin: 2% 2%;
+  padding: 0%;
+  /* max-height: 20%; */
+}
+.more-categories {
+  box-sizing: border-box;
+  display: block;
+  width: 100%;
+  height: -10px;
+  padding-top: 3%;
+}
+.categories {
+  display: block;
+  margin: 1%;
+  justify-content: space-between;
+}
+#head {
+  margin-top: 3%;
+}
+.item {
+  display: inline-block;
+  justify-content: center;
+  align-items: center;
+  width: 18%;
+  margin: 2% -2% 2% 0%;
+}
+.item h4 {
+  width: max-content;
+  padding-left: 10%;
+}
+
+.items {
+  align-items: center;
+  display: inline-block;
+  float: inline-start;
+  margin: 2% 0%;
+  padding: 0%;
+}
+h4,
+p {
+  text-align: center;
+  margin: 0%;
+  width: 50%;
+}
+.dash_dog {
+  display: block;
+  box-sizing: border-box;
+  max-width: 100%;
+}
+.dash img {
+  display: inline-block;
+  width: 18%;
+  margin: 2% 3%;
+  padding: 0%;
+  /* max-height: 20%; */
+}
+
+/* /////////////////////////////////////////////////////////////////////// */
+
+@media screen and (max-width: 1024px) {
+  #login,
+  #cart {
+    padding: 0%;
+    margin: 3%;
+  }
+
+  .nav2 a {
+    margin: 0 4%;
+  }
+}
+@media screen and (max-width: 768px) {
+  #search {
+    width: 25%;
+    font-size: 65%;
+    padding: 1% 1%;
+  }
+  .search-bar i {
+    transform: translateX(-220%);
+  }
+  .nav2 a {
+    margin: 0 4%;
+    justify-content: space-between;
+  }
 }
 
 @media (min-width: 426px) and (max-width: 768px) {
@@ -326,7 +328,7 @@ footer a {
     margin: 1% 1%;
   }
   .search-bar i {
-    transform: translateY(250%);
+    transform: translateY(300%);
     transform: translateX(-100%);
   }
   #login {
@@ -340,10 +342,31 @@ footer a {
     margin-left: 2.5%;
     justify-items: stretch;
   }
+  .c1 div {
+    justify-content: space-between;
+    margin: auto;
+  }
   .nav2 a {
-    font-size: 90%;
+    font-size: 70%;
+    padding: 0%;
     flex: content;
   }
+  .item {
+    justify-content: flex-end;
+    align-items: center;
+    width: 30%;
+    margin: 2% -1% 2% 3%;
+    font-size: smaller;
+  }
+  .item img,
+  h4,
+  p {
+    align-self: center;
+    justify-items: center;
+    padding-left: 7%;
+    width: 60%;
+  }
+
   .col1,
   .col2,
   .col3,
@@ -399,7 +422,7 @@ footer a {
   }
 }
 
-@media (min-width: 320px) and(max-width: 370px) {
+@media (min-width: 325px) and (max-width: 370px) {
   #logo {
     margin: 2.8% 2%;
   }
@@ -421,7 +444,7 @@ footer a {
 
   .nav2 a {
     font-size: 70%;
-    margin: 1.8%;
+    margin: 1.5%;
   }
   .offer_bar img {
     padding-top: 3%;
@@ -441,9 +464,11 @@ footer a {
     padding: 0;
     width: 18%;
     margin-left: 3%;
+    font-size: 100%;
   }
-  .foot {
-    font-size: small;
+  footer li {
+    padding-left: 0.5%;
+    font-size: smaller;
   }
 }
 
@@ -481,7 +506,8 @@ footer a {
     width: 18%;
     margin-left: 3%;
   }
-  .foot {
-    font-size: small;
+  footer li {
+    padding-left: 0.5%;
+    font-size: smaller;
   }
 }
